testsuite/tests/rep-poly/RepPolySum.stderr

RepPolySum.hs:11:9: error:
    • The unboxed sum does not have a fixed runtime representation.
      Its type is:
        (# Int# | a #) :: TYPE ('SumRep '[ 'IntRep, rep])
    • In the expression: (# | bar () #)
      In an equation for ‘foo’:
          foo _
            = (# | bar () #)
            where
                bar :: () -> a
                bar _ = undefined

RepPolySum.hs:20:9: error:
    • The unboxed sum does not have a fixed runtime representation.
      Its type is:
        (# Int# | a #) :: TYPE ('SumRep '[ 'IntRep, rep])
    • In the expression: (# 17# | #)
      In an equation for ‘baz’: baz _ = (# 17# | #)
